2003-07-13  Ravi Pratap M  <ravi@ximian.com>

	* test-178.cs: Use this as it is a free slot. Test 
	for bug #45876.

	* makefile: Update.

	* README.tests: Update

2003-07-13  Martin Baulig  <martin@ximian.com>

	* test-202.cs: Added test for bug #41975.

2003-07-13  Martin Baulig  <martin@ximian.com>

	* test-201.cs: Added test for bug #35631.

2003-07-12  Martin Baulig  <martin@ximian.com>

	* test-200.cs: Added test for bug #45854.

2003-07-08  Martin Baulig  <martin@ximian.com>

	* test-198.cs, test-199.cs: New tests for bugs #36316, #36314 and
	#36313.

2003-07-05  Martin Baulig  <martin@ximian.com>

	* test-197.cs: New test for bug #42973.

2003-06-29  Miguel de Icaza  <miguel@ximian.com>

	* makefile (TEST_SOURCES): Add the tests that require an assembly,
	so we dont get another regression here (#37521).

2003-05-27  Ravi Pratap  <ravi@ximian.com>

	* test-45.cs : Enable code which tests IntPtr array
	initialization. This automatically serves as a test case for bug
	#36030.

	Improve test.

2003-05-17  Ravi Pratap  <ravi@ximian.com>

	* test-194.cs: New test for bug #39108

	* README.tests : Update accordingly.

	* makefile : Add new test.

2003-05-19  Martin Baulig  <martin@ximian.com>

	* test-162.cs: Added testcases for structs containing other
	structs as fields.  Bug #42597.

2003-05-18  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added testcase for bug #41657.

2003-05-18  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added the contents of test-189.cs as a new testcase
	to this test.

	* test-189.cs: Removed, let's keep the flow analysis tests in one
	single test file.

2003-05-11  Martin Baulig  <martin@ximian.com>

	* test-193.cs: New test for bug #39828.

2003-04-10  Miguel de Icaza  <miguel@ximian.com>

	* test-43.cs: Improve test.

2003-04-06  Martin Baulig  <martin@ximian.com>

	* test-190.cs: New test.

2003-04-05  Martin Baulig  <martin@ximian.com>

	* test-189.cs: New test for bug #40670.
